# My-Stuff

./: .gitignore  README.md  pom.xml
Etterna/: pom.xml
Etterna/src/main/java/com/ry/etterna/: EtternaFile.java
Etterna/src/test/java/com/ry/etterna/: CacheTest.java  ReaderTester.java
EtternaToOsu/: pom.xml  readme
EtternaToOsu/src/main/java/com/ry/: EtternaToOsuMain.java
EtternaToOsu/src/main/java/com/ry/cli/: CFGOperations.java  CLI.java  ConversionConfig.java  Desc.java
EtternaToOsu/src/main/java/com/ry/converter/: BasicChartFinaliser.java  ChartFinaliser.java  CompletionListener.java  OsuConverter.java  OsuConverterHandler.java  OsuConverterImpl.java
EtternaToOsu/src/main/java/com/ry/etternaToOsu/: EtternaConverter.java  (+5 more)
EtternaToOsu/src/main/resources/: OsuTemplate.txt
FFMPEG/: pom.xml
MinaCalcNative/MinaCalc-Native-FNUtils/: CMakeLists.txt
MinaCalcNative/MinaCalc-Native-FNUtils/lib/0.71.0/MinaCalc/: MinaCalc.cpp  Ulbu.h  UlbuAcolytes.h
MinaCalcNative/MinaCalc-Native-FNUtils/lib/0.71.0/MinaCalc/Dependent/HD_PatternMods/: CJOHAnchor.h
MinaCalcNative/MinaCalc-Native-FNUtils/native-mapping/: MinaCalc.java
MinaCalcNative/MinaCalc-Native-FNUtils/src/: MinaCalc.cpp  Util.h  com_ry_etterna_msd_MinaCalc.h
MyStuffFix/: pom.xml
OsuBuilder/: pom.xml
OsuBuilder/src/test/java/: HitObjectTest.java  TemplateTest.java  TestTimingPoint.java  TimingPointTest.java
VSRG/: pom.xml
src/main/java/com/ry/useful/: Decimal64.java  Entity.java  MessageBuilder.java  MutatingValue.java  NamedFileStructure.java  StringUtils.java
src/test/java/: TestSQLite.java
(+105 files in other folders)
